tests/NormalTests/paczka1/fuzzy1/12924042.err
Error in line 2: tfEq1 S425 81,5
Error in line 1: S425 A205 81,1
Error in line 7: 72bk S113 74,37
Error in line 6: 72bk S113 74,6
Error in line 11: S425 S425 71,18
Error in line 10: S425 S425 53,6
Error in line 8: 72bk S425 63,5
Error in line 14: 72bk A205 45,8
Error in line 23: aev9Ge£A230£70,1
Error in line 22: 4fskGR6pkxX S113 50,5
Error in line 24: ae469L S425 53,6
Error in line 20: 72bk S113 34,2
Error in line 36: 4fskGR6pkxX S425 94,9
